app/static/css/base.css
/* Links */

a,
a:focus,
a:hover {
    color: #ee6e73;
}


/*
 * Base structure
 */

html,
body {
    -webkit-overflow-scrolling: touch;
    height: 100%;
    width: 100%;
    margin: 0px;
    padding: 0px;
    background-color: #fdfdfd;
    color: rgba(0, 0, 0, 0.71);
    font-size: 8px;
    text-align: center;
}


/* Extra markup and styles for table-esque vertical and horizontal centering */

.site-wrapper {
    display: table;
    width: 100%;
    height: 100%;
    /* For at least Firefox */
    min-height: 100%;
}

.site-wrapper-inner {
    padding-top: 50px;
    display: table-cell;
    vertical-align: top;
}

.cover-container {
    margin-right: auto;
    margin-left: auto;
}


/* Padding for spacing */

.inner {
    padding: 30px;
}


/*
 * Header
 */

.masthead-brand {
    color: #ee6e73;
    margin-top: 10px;
    margin-bottom: 10px;
    font-weight: 700;
    font-family: 'Roboto Slab', sans-serif;
}

.masthead-brand a {
    color: #FFFFFF;
}

.masthead-nav > li {
    display: inline-block;
    font-weight: 700;
    font-family: 'Roboto Slab', sans-serif;
}

.masthead-nav > li + li {
    margin-left: 20px;
}

.masthead-nav > li > a {
    padding-right: 0;
    padding-left: 0;
    font-size: 16px;
    font-weight: 700;
    color: #FFFFFF;
    border-bottom: 2px solid transparent;
}

.masthead-nav > li > a:hover,
.masthead-nav > li > a:focus {
    background-color: transparent;
    border-bottom-color: #FFFFFF;
    color: #FFFFFF;
}

.masthead-nav > .active > a,
.masthead-nav > .active > a:hover,
.masthead-nav > .active > a:focus {
    color: #FFFFFF;
    border-bottom-color: #FFFFFF;
}

.nav-class {
    background: #ee6e73;
    border-color: #ee6e73;
    border-bottom: 5px double #fdfdfd;
}

.nav-container {
    margin-top: 18px;
    margin-bottom: 18px;
}

a.nav-a {
    color: #FFFFFF;
}


/*
 * Cover
 */

.cover {
    padding: 0px 0px;
    padding-top: 40px;
}

.cover .btn-lg {
    padding: 10px 20px;
    font-weight: bold;
}


/*
 * Footer
 */

.mastfoot {
    color: #999;
    /* IE8 proofing */
    color: rgba(255, 255, 255, .5);
}


/*
 * Affix and center
 */

.masthead {
    margin-bottom: 25px;
}

@media (min-width: 768px) {
    /* Pull out the header and footer */
    .masthead {
        top: 0;
    }
    .mastfoot {
        bottom: 0;
    }
    /* Handle the widths */
    .masthead,
    .mastfoot,
    .cover-container {
        width: 100%;
        /* Must be percentage or pixels for horizontal alignment */
    }
}

@media (min-width: 992px) {
    .masthead,
    .mastfoot,
    .cover-container {
        width: 850px;
    }
}

.title {
    font-size: 4rem;
    font-weight: 400;
    font-family: 'Roboto Slab', sans-serif;
    color: #ee6e73;
    text-align: center;
    display: block;
    margin-bottom: 2rem;
    line-height: 110%;
}

@media (min-width: 768px) {
    .title {
        font-size: 6rem;
    }
}

.bodyText {
    margin-top: 0rem;
    font-size: 1.6rem;
}

.bodyText a {
    text-decoration: underline;
}

@media (min-width: 768px) {
    .bodyText {
        margin-top: 3rem;
    }
}

@media (max-width: 991px) {
    [class*="col-"] {
        margin-bottom: 20px;
    }
}

.pagination > li > a {
    color: #26A69A;
}

.pagination > .active > a {
    background-color: #26A69A;
    border-color: #26A69A;
}

.pagination > .active > a:hover {
    background-color: #1C867C;
    border-color: #1C867C;
    color: #26A69A;
}

.pagination > .active > a:focus {
    background-color: #1C867C;
    border-color: #1C867C;
}


/* 
 * Fifths
 */

.col-xs-5ths,
.col-sm-5ths,
.col-md-5ths,
.col-lg-5ths {
    position: relative;
    min-height: 1px;
    padding-right: 10px;
    padding-left: 10px;
}

.col-xs-5ths {
    width: 20%;
    float: left;
}

@media (min-width: 768px) {
    .col-sm-5ths {
        width: 20%;
        float: left;
    }
}

@media (min-width: 992px) {
    .col-md-5ths {
        width: 20%;
        float: left;
    }
}

@media (min-width: 1200px) {
    .col-lg-5ths {
        width: 20%;
        float: left;
    }
}

hr {
    height: 6px;
    background: url(http://ibrahimjabbari.com/english/images/hr-11.png) repeat-x 0 0;
    border: 0;
    margin-top: 8rem;
    margin-bottom: 8rem;
}


/* Portrait phones and smaller */


/**
* Nav/Search Bar Styling
* AND Masthead and brand positioning
* Everything above 768px
*/

@media (min-width: 1200px) {}

@media (min-width: 768px) {
    .container {
        display: table;
    }
    .brand {
        display: table-cell;
    }
    .nav-div {
        display: table-cell;
    }
    .search-div {
        display: inline-block;
    }
}

.search-group {
    margin-top: 10px;
    width: 200px;
    margin: 0 auto;
}

.search-icon {
    position: relative;
    right: 5px;
    color: white;
}

button.search-btn {
    background-color: #26a69a;
}

.dropdown-menu {
    font-size: 1.5rem;
    min-width: 130px;
}

.dropdown-menu li a {
    padding: 2px 10px;
}

